fixed white border for overflow scroll

--- a/irecognise-frontend/src/components/Blacklist/styles.css
+++ b/irecognise-frontend/src/components/Blacklist/styles.css
@@ -33,7 +33,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .ant-upload-list {
@@ -96,7 +96,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 
