--- a/irecognise-frontend/src/components/Streams/styles.css
+++ b/irecognise-frontend/src/components/Streams/styles.css
@@ -29,7 +29,7 @@
     background-color: #2B305C;
     border-radius: 8px;
     padding: 2rem;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .video-input {
